# tezos-domains

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  dipdup.local.yml  dipdup.prod.yml  dipdup.yml  docker-compose.local.yml  docker-compose.yml  pyproject.toml  stack.yml
.github/workflows/: build.yml
client/: README.md  package-lock.json  package.json
dipdup_tezos_domains/: models.py
dipdup_tezos_domains/handlers/: on_update_expiry_map.py  on_update_records.py
tezos_domains/: .dockerignore  .gitignore  Makefile  README.md  dipdup.yaml  models.py  pyproject.toml
tezos_domains/configs/: dipdup.sqlite.yaml  dipdup.swarm.yaml  replay.yaml
tezos_domains/deploy/: Dockerfile  compose.sqlite.yaml  compose.swarm.yaml  compose.yaml  sqlite.env.default  swarm.env.default
tezos_domains/graphql/: tezos_domains_updates.graphql  token_metadata_updates.graphql
tezos_domains/handlers/: on_update_expiry_map.py  on_update_records.py
tezos_domains/hooks/: check_expiration.py  on_index_rollback.py  on_rollback.py
tezos_domains/types/name_registry/big_map/: store_records_value.py
