[tool.poetry]
name = "dipdup-tezos-domains"
version = "0.0.1"
description = "Selective indexer for Tezos Domains contract suite"
authors = ["Lev Gorodetskiy <github@droserasprout.space>"]

[tool.poetry.dependencies]
python = "^3.8"
dipdup = "^3.1.3"
strict-rfc3339 = "^0.7"

[tool.poetry.dev-dependencies]
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
