[tool.poetry]
name = "tezos-domains"
version = "0.0.1"
description = "Selective indexer for Tezos Domains contract suite"
authors = ["Lev Gorodetskiy <github@droserasprout.space>"]

[tool.poetry.dependencies]
python = "^3.10"
dipdup = "5.0.0rc3"
strict-rfc3339 = "^0.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "3.9.0"
flakehell = "^0.9.0"
isort = "^5.7.0"
mypy = "^0.900"

[tool.isort]
line_length = 140

[tool.black]
line-length = 140
target-version = ['py38']
skip-string-normalization = true

[tool.flakehell]
format = "colored"
max_line_length = 140
show_source = true

[tool.flakehell.plugins]
pyflakes = ["+*"]
"flake8-*" = ["+*"]
flake8-docstrings = ["-*"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
