[project]
name = "tezos_domains"
version = "1.0.0"
description = "Selective indexer for Tezos Domains smart contracts"
license = { text = "MIT" }
authors = [
    { name = "Lev Gorodetskii", email = "dipdup@drsr.io" }
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "dipdup>=7.0.0rc1,<8",
    "strict-rfc3339>=0.7",
]

[tool.pdm.dev-dependencies]
dev = [
    "isort",
    "black",
    "ruff",
    "mypy",
]

[tool.pdm.scripts]
_isort = "isort ."
_black = "black ."
_ruff = "ruff check --fix ."
_mypy = "mypy ."
all = { composite = ["fmt", "lint"] }
fmt = { composite = ["_isort", "_black"] }
lint = { composite = ["_ruff", "_mypy"] }
image = "docker buildx build . --load --progress plain -f deploy/Dockerfile -t tezos_domains:latest"

[tool.isort]
line_length = 120
force_single_line = true

[tool.black]
line-length = 120
target-version = ['py311']
skip-string-normalization = true

[tool.ruff]
line-length = 120
target-version = 'py311'

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"